fixed the mock apis with pagination